--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,47 @@
+
+@mixin align($justify-content,$align-item,$text-align) {
+    justify-content: $justify-content;
+    align-items: $align-item;
+    text-align: $text-align;
+}
+@mixin widthandheight($width,$height) {
+    width: $width;
+    height: $height;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+}
 .signinPage{
-    background-color: yellow;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    overflow-y: hidden;
+    @include align(center, center, center);
+    img{
+        @include widthandheight(100%,100%);
+    }
+    main{
+        position: absolute;
+        @include widthandheight(65%,80%);
+        display: flex;
+        section{
+            // padding: 0.5rem;
+            background-color: whitesmoke;
+            border-radius: 0.5rem;
+            @include widthandheight(65%,100%);
+            img{
+                @include widthandheight(100%,100%);
+            }
+        }
+        .smallSignIn{
+            position: absolute;
+            right: 5%;top: 10%;
+            background-color: green;
+            border-radius: 0.5rem;
+            @include widthandheight(40%,75%);
+        }
+    }
 }
