--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Oleo+Script+Swash+Caps&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -14,32 +15,87 @@
   align-items: center;
   text-align: center;
 }
-.signinPage img {
-  width: 100%;
-  height: 100%;
+.signinPage video {
+  width: 10000px;
+  height: 10000px;
 }
 .signinPage main {
-  position: absolute;
-  width: 65%;
+  width: 70%;
   height: 80%;
+  position: absolute;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+.signinPage main .signInContent {
+  width: 50%;
+  height: 80%;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  transform: translateX(2rem);
+  border-radius: 1rem;
+}
+.signinPage main .signInContent h1 {
+  color: #5ae4a7;
+  font-family: "Monoton", cursive;
+  font-size: 3rem;
+  transform: translateY(-2rem);
+}
+.signinPage main .signInContent p {
+  width: 80%;
+}
+.signinPage main .signInContent p img {
+  width: 2rem;
+  height: 2rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.signinPage main .signInContent button {
+  width: 70%;
+  border: none;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
+  background-color: #d6f7e7;
+  color: #1c2e35;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+}
+.signinPage main .signInContent button img {
+  width: 10%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.signinPage main .signInContent button p {
+  padding: 0 1rem;
+  font-size: large;
+  font-weight: bold;
 }
 .signinPage main section {
-  background-color: whitesmoke;
-  border-radius: 0.5rem;
-  width: 65%;
+  background-color: #d6f7e7;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 1rem;
+  width: 50%;
   height: 100%;
 }
 .signinPage main section img {
-  width: 100%;
-  height: 100%;
-}
-.signinPage main .smallSignIn {
-  position: absolute;
-  right: 5%;
-  top: 10%;
-  background-color: green;
-  border-radius: 0.5rem;
-  width: 40%;
-  height: 75%;
+  width: 60%;
+  height: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=App.css.map */
