--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Oleo+Script+Swash+Caps&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Monoton&family=Oleo+Script+Swash+Caps&display=swap');
 @mixin align($justify-content,$align-item,$text-align) {
     justify-content: $justify-content;
     align-items: $align-item;
@@ -18,6 +18,7 @@ $quatery-color : #d6f7e7;
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
+    transition: all 0.2s ease-in-out;
 }
 .signinPage{
     height: 100vh;
@@ -35,6 +36,7 @@ $quatery-color : #d6f7e7;
         
         display: flex;
         @include align(space-evenly, center ,center);
+
         .signInContent{
             @include widthandheight(50%,80%);
             backdrop-filter: blur(3px);
@@ -50,27 +52,42 @@ $quatery-color : #d6f7e7;
                 font-size: 3rem;
                 transform: translateY(-2rem);
             }
-            p{
+            .signInDesc{
                 width: 80%;
-
+                display: flex;
+                @include align(left, center, left);
+                padding: 0.5rem 1rem;
                 img{
                     @include widthandheight(2rem,2rem);
                     object-fit: cover;
+                    margin: 0 1rem;
+                }
+                p{
+                    font-family: 'Courgette', cursive;
+                    color: $quatery-color;
+                    font-size: medium;
+                    font-weight: bold;
+                    text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
                 }
             }
             button{
-                width: 70%;
+                width: 50%;
                 border: none;
-                padding: 1rem;
+                padding: 0.5rem;
                 margin:0.5rem 0;
                 border-radius: 0.5rem;
                 background-color: $quatery-color;
                 color: $secondary-color;
                 display: flex;
+                box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
                 @include align(center, center,center);
                 cursor: pointer;
+                &:hover{
+                    transform: scale(1.05);
+                    box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+                }
                 img{
-                    @include widthandheight(10%,100%);
+                    @include widthandheight(1.5rem , 1.5rem);
                     object-fit: cover;
                 }
                 p{
