--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
   transition: all 0.2s ease-in-out;
 }
 
@@ -117,4 +117,180 @@
   height: 60%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.chatRoom {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.chatRoom video {
+  position: fixed;
+}
+.chatRoom .chatMessageSection {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.chatRoom .chatMessageSection .chatroomHeader {
+  position: absolute;
+  left: 10%;
+  width: 30%;
+  height: 60%;
+  padding: 1rem;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  border-radius: 1rem;
+}
+.chatRoom .chatMessageSection .chatroomHeader p {
+  font-family: "Courgette", cursive;
+  color: #d6f7e7;
+  font-size: medium;
+  font-weight: bold;
+  text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
+  padding-left: 3rem;
+}
+.chatRoom .chatMessageSection .chatroomHeader .chatroomHead {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.chatRoom .chatMessageSection .chatroomHeader .chatroomHead img {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+}
+.chatRoom .chatMessageSection .chatroomHeader .chatroomHead h1 {
+  color: #5ae4a7;
+  font-family: "Monoton", cursive;
+  font-size: 2rem;
+}
+.chatRoom .chatMessageSection .chatroomContainer {
+  position: relative;
+  right: -20%;
+  width: 50%;
+  height: 90%;
+  background-color: rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.2rem;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox {
+  height: 90%;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .message {
+  width: 70%;
+  word-wrap: break-word;
+  padding: 1rem;
+  margin: 0 1rem;
+  display: flex;
+  align-items: center;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .message img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .message p {
+  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+  word-wrap: break-word;
+  word-break: keep-all;
+  text-align: left;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .sent {
+  flex-direction: row-reverse;
+  float: right;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .sent p {
+  background-color: #d6f7e7;
+  margin-right: 1rem;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .received {
+  float: left;
+}
+.chatRoom .chatMessageSection .chatroomContainer .messagebox .received p {
+  background-color: #1c2e35;
+  color: #a4a4a4;
+  margin-left: 1rem;
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  flex-direction: row;
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox form input {
+  width: 85%;
+  height: 100%;
+  padding: 1rem;
+  background-color: #d6f7e7;
+  border: none;
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox form button {
+  width: 15%;
+  height: 100%;
+  padding: 1rem;
+  border: none;
+  background-color: #5ae4a7;
+  cursor: pointer;
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox form button:hover img {
+  transform: scale(1.5);
+}
+.chatRoom .chatMessageSection .chatroomContainer .inputbox form button img {
+  width: 0.9rem;
+  height: 0.9rem;
+}
+
+.logoutbtn {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  width: 70%;
+  padding: 0.5rem 1rem;
+  border-radius: 0.3rem;
+  border: none;
+  background-color: #5ae4a7;
+  box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.3);
+  margin-top: 1rem;
+  cursor: pointer;
+}
+.logoutbtn img {
+  width: 2rem;
+  height: 2rem;
+}
+.logoutbtn p {
+  font-size: medium;
+  font-weight: bold;
+  color: #1c2e35;
+}
+.logoutbtn:hover {
+  box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+  transform: scale(1.05);
 }/*# sourceMappingURL=App.css.map */
