--- a/src/App.scss
+++ b/src/App.scss
@@ -1,113 +1,263 @@
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Monoton&family=Oleo+Script+Swash+Caps&display=swap');
-@mixin align($justify-content,$align-item,$text-align) {
-    justify-content: $justify-content;
-    align-items: $align-item;
-    text-align: $text-align;
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Monoton&family=Oleo+Script+Swash+Caps&display=swap");
+@mixin align($justify-content, $align-item, $text-align) {
+  justify-content: $justify-content;
+  align-items: $align-item;
+  text-align: $text-align;
 }
-@mixin widthandheight($width,$height) {
-    width: $width;
-    height: $height;
+@mixin widthandheight($width, $height) {
+  width: $width;
+  height: $height;
 }
 
-$primary-color : #5ae4a7;
-$secondary-color : #1c2e35;
-$tertiary-color : #a4a4a4;
-$quatery-color : #d6f7e7;
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-    transition: all 0.2s ease-in-out;
+$primary-color: #5ae4a7;
+$secondary-color: #1c2e35;
+$tertiary-color: #a4a4a4;
+$quatery-color: #d6f7e7;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  transition: all 0.2s ease-in-out;
 }
-.signinPage{
-    height: 100vh;
-    width: 100%;
+.signinPage {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  overflow-y: hidden;
+  @include align(center, center, center);
+  video {
+    @include widthandheight(10000px, 10000px);
+  }
+
+  main {
+    @include widthandheight(70%, 80%);
+    position: absolute;
+
     display: flex;
-    overflow-y: hidden;
-    @include align(center, center, center);
-    video{
-        @include widthandheight(10000px,10000px);
-    }
-    
-    main{
-        @include widthandheight(70%, 80%);
-        position: absolute;
-        
-        display: flex;
-        @include align(space-evenly, center ,center);
+    @include align(space-evenly, center, center);
 
-        .signInContent{
-            @include widthandheight(50%,80%);
-            backdrop-filter: blur(3px);
+    .signInContent {
+      @include widthandheight(50%, 80%);
+      backdrop-filter: blur(3px);
+      display: flex;
+      flex-direction: column;
+      @include align(center, center, center);
+      background-color: rgba(0, 0, 0, 0.2);
+      transform: translateX(2rem);
+      border-radius: 1rem;
+      h1 {
+        color: $primary-color;
+        font-family: "Monoton", cursive;
+        font-size: 3rem;
+        transform: translateY(-2rem);
+      }
+      .signInDesc {
+        width: 80%;
+        display: flex;
+        @include align(left, center, left);
+        padding: 0.5rem 1rem;
+        img {
+          @include widthandheight(2rem, 2rem);
+          object-fit: cover;
+          margin: 0 1rem;
+        }
+        p {
+          font-family: "Courgette", cursive;
+          color: $quatery-color;
+          font-size: medium;
+          font-weight: bold;
+          text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
+        }
+      }
+      button {
+        width: 50%;
+        border: none;
+        padding: 0.5rem;
+        margin: 0.5rem 0;
+        border-radius: 0.5rem;
+        background-color: $quatery-color;
+        color: $secondary-color;
+        display: flex;
+        box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
+        @include align(center, center, center);
+        cursor: pointer;
+        &:hover {
+          transform: scale(1.05);
+          box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+        }
+        img {
+          @include widthandheight(1.5rem, 1.5rem);
+          object-fit: cover;
+        }
+        p {
+          padding: 0 1rem;
+          font-size: large;
+          font-weight: bold;
+        }
+      }
+    }
+    section {
+      background-color: $quatery-color;
+      border: 2px solid rgba(0, 0, 0, 0.5);
+      display: flex;
+      @include align(center, center, center);
+      border-radius: 1rem;
+      @include widthandheight(50%, 100%);
+      img {
+        @include widthandheight(60%, 60%);
+        object-fit: cover;
+      }
+    }
+  }
+}
+.chatRoom {
+  @include widthandheight(100%, 100vh);
+  display: flex;
+  @include align(center, center, center);
+  video {
+    position: fixed;
+  }
+  .chatMessageSection {
+    // position: absolute;
+    @include widthandheight(100%, 100vh);
+    display: flex;
+    @include align(center, center, center);
+    .chatroomHeader {
+      position: absolute;
+      left: 10%;
+      @include widthandheight(30%, 60%);
+      padding: 1rem;
+      margin: auto;
+      display: flex;
+      @include align(center, center, left);
+      flex-direction: column;
+      background-color: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(2px);
+      border-radius: 1rem;
+      p{
+        font-family: "Courgette", cursive;
+          color: $quatery-color;
+          font-size: medium;
+          font-weight: bold;
+          text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
+          padding-left: 3rem;
+      }
+      .chatroomHead {
+        display: flex;
+        @include align(center, center, center);
+        img {
+          @include widthandheight(2rem, 2rem);
+          margin-right: 1rem;
+        }
+        h1 {
+          color: $primary-color;
+          font-family: "Monoton", cursive;
+          font-size: 2rem;
+        }
+      }
+    }
+    .chatroomContainer {
+      position: relative;
+      right: -20%;
+      @include widthandheight(50%,90% );
+      background-color: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(2px);
+      display: flex;
+      flex-direction: column;
+      border-radius: 0.2rem;
+      .messagebox{
+        height: 90%;
+        .message{
+            width: 70%;
+            word-wrap: break-word;
+            padding: 1rem;
+            margin:0 1rem ;
             display: flex;
-            flex-direction: column;
-            @include align(center, center, center);
-            background-color: rgba(0, 0, 0, 0.2);
-            transform: translateX(2rem);
-            border-radius: 1rem;
-            h1{
-                color: $primary-color;
-                font-family: 'Monoton', cursive;
-                font-size: 3rem;
-                transform: translateY(-2rem);
+            align-items: center;
+            img{
+                @include widthandheight(3rem,3rem);
+                border-radius: 50%;
             }
-            .signInDesc{
-                width: 80%;
-                display: flex;
-                @include align(left, center, left);
-                padding: 0.5rem 1rem;
-                img{
-                    @include widthandheight(2rem,2rem);
-                    object-fit: cover;
-                    margin: 0 1rem;
-                }
-                p{
-                    font-family: 'Courgette', cursive;
-                    color: $quatery-color;
-                    font-size: medium;
-                    font-weight: bold;
-                    text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
-                }
+            p{
+                padding:0.7rem 1rem;
+                border-radius: 0.5rem;
+                word-wrap: break-word;
+                word-break: keep-all;
+                text-align: left;
+            }
+        }
+        .sent{
+            flex-direction: row-reverse;
+            float: right;
+            p{
+                background-color: $quatery-color;
+                margin-right: 1rem;
+            }
+        }
+        .received{
+            float: left;
+            p{
+                background-color: $secondary-color;
+                color: $tertiary-color;
+                margin-left: 1rem;
+            }
+        }
+      }
+      .inputbox{
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        form{
+            @include widthandheight(100%,100%);
+            display: flex;
+            @include align(space-evenly, center, center);
+            flex-direction: row;
+            input{
+                @include widthandheight(85%,100%);
+                padding: 1rem;
+                background-color: $quatery-color;
+                border: none;
             }
             button{
-                width: 50%;
+                @include widthandheight(15%,100%);
+                padding:1rem;
                 border: none;
-                padding: 0.5rem;
-                margin:0.5rem 0;
-                border-radius: 0.5rem;
-                background-color: $quatery-color;
-                color: $secondary-color;
-                display: flex;
-                box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
-                @include align(center, center,center);
+                background-color: $primary-color;
                 cursor: pointer;
-                &:hover{
-                    transform: scale(1.05);
-                    box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+                &:hover img{
+                    transform: scale(1.5);
                 }
                 img{
-                    @include widthandheight(1.5rem , 1.5rem);
-                    object-fit: cover;
-                }
-                p{
-                    padding: 0 1rem;
-                    font-size: large;
-                    font-weight: bold;
+                    @include widthandheight(0.9rem ,0.9rem );
                 }
             }
         }
-        section{
-            background-color: $quatery-color;
-            border: 2px solid rgba(0, 0, 0, 0.5);
-            display: flex;
-            @include align(center, center ,center);
-            border-radius: 1rem;
-            @include widthandheight(50%,100% );
-            img{
-                @include widthandheight(60% ,60%);
-                object-fit: cover;
-            }
-        }
+      }
+    }
+  }
+}
+.logoutbtn{
+    display: flex;
+    @include align(space-evenly, center ,center);
+    width: 70%;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    border: none;
+    background-color: $primary-color;
+    box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.3);
+    margin-top: 1rem;
+    cursor: pointer;
+    img{
+        @include widthandheight(2rem,2rem );
+    }
+    p{
+        font-size: medium;
+        font-weight: bold;
+        color: $secondary-color;
+    }
+    &:hover{
+        box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+        transform: scale(1.05);
     }
 }
