--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   transition: all 0.2s ease-in-out;
 }
 
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .signinPage {
   height: 100vh;
   width: 100%;
@@ -131,6 +136,8 @@
   position: fixed;
 }
 .chatRoom .chatMessageSection {
+  position: absolute;
+  right: 5%;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -181,7 +188,7 @@
 }
 .chatRoom .chatMessageSection .chatroomContainer {
   position: relative;
-  right: -20%;
+  right: -25%;
   width: 50%;
   height: 90%;
   background-color: rgba(0, 0, 0, 0.3);
@@ -192,10 +199,12 @@
   border-radius: 0.2rem;
 }
 .chatRoom .chatMessageSection .chatroomContainer .messagebox {
+  padding: 1rem;
   height: 90%;
 }
 .chatRoom .chatMessageSection .chatroomContainer .messagebox .message {
-  width: 70%;
+  display: block;
+  width: 100%;
   word-wrap: break-word;
   padding: 1rem;
   margin: 0 1rem;
@@ -219,7 +228,7 @@
   float: right;
 }
 .chatRoom .chatMessageSection .chatroomContainer .messagebox .sent p {
-  background-color: #d6f7e7;
+  background-color: #5ae4a7;
   margin-right: 1rem;
 }
 .chatRoom .chatMessageSection .chatroomContainer .messagebox .received {
@@ -293,4 +302,88 @@
 .logoutbtn:hover {
   box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
   transform: scale(1.05);
+}
+
+.mobileLogout {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .signinPage video {
+    display: none;
+  }
+  .signinPage main {
+    width: 100%;
+    height: 100%;
+    background-color: #5ae4a7;
+  }
+  .signinPage main .signInContent {
+    width: 100%;
+    height: 100%;
+  }
+  .signinPage main .signInContent h1 {
+    text-shadow: -3px 3px 3px rgba(0, 0, 0, 0.5);
+  }
+  .signinPage main section {
+    display: none;
+  }
+  .chatRoom {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .chatRoom video {
+    position: fixed;
+  }
+  .chatRoom .chatMessageSection {
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .chatRoom .chatMessageSection .chatroomHeader {
+    display: none;
+  }
+  .chatRoom .chatMessageSection .chatroomContainer {
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .chatRoom .chatMessageSection .chatroomContainer .messagebox {
+    padding: 0;
+  }
+  .chatRoom .chatMessageSection .chatroomContainer .messagebox .message {
+    width: 100%;
+    margin: 0;
+  }
+  .mobileLogout {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    background-color: #1c2e35;
+    padding: 0.7rem 1rem;
+  }
+  .mobileLogout h1 {
+    color: #5ae4a7;
+    font-family: "Monoton", cursive;
+    font-size: 2rem;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+  }
+  .logoutbtn {
+    width: 40%;
+    box-shadow: none;
+    margin-top: 0;
+  }
 }/*# sourceMappingURL=App.css.map */
