--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,15 @@ $quatery-color: #d6f7e7;
   box-sizing: border-box;
   overflow-x: hidden;
   transition: all 0.2s ease-in-out;
+  &::-webkit-scrollbar{
+    width: 1rem;
+    background-color: #5ae4a7;
+  }
+  &::-webkit-scrollbar-thumb{
+    background-color: $secondary-color;
+    width: 0.5rem;
+    border-radius: 0.3rem;
+  }
 }
 img {
   object-fit: cover;
@@ -138,8 +147,7 @@ img {
       flex-direction: column;
       background-color: rgba(0, 0, 0, 0.3);
       backdrop-filter: blur(2px);
-      border-radius: 1rem;
-      
+      border-radius: 1rem;      
       p {
         font-family: "Courgette", cursive;
         color: $quatery-color;
