--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ $quatery-color: #d6f7e7;
 
 body {
   background-color: rgb(58, 58, 58);
+  font-family: 'Poppins', sans-serif;
 }
 
 
@@ -44,7 +45,12 @@ body {
   min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
 }
-
+.social{
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // z-index: 100;
+}
 main {
   padding: 10px;
   height: 80vh;
@@ -80,6 +86,7 @@ form {
 form button {
   width: 20%;
   background-color: $tertiary-color;
+  border-left: 3px solid $secondary-color;
 }
 
 
@@ -98,12 +105,13 @@ button {
   background-color: #282c34; /* Green */
   border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   cursor: pointer;
   font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button:disabled {
@@ -115,6 +123,19 @@ button:disabled {
   background: $secondary-color;
   max-width: 400px;
   border-radius: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  img{
+    width: 2rem;
+    height: 2rem;
+    object-fit: cover;
+  }
+  p{
+    padding: 1rem;
+    margin: auto;
+  }
 }
 .signInPage{
   display: flex;
@@ -128,20 +149,23 @@ button:disabled {
 .sign-in {
   color: #282c34;
   background: $tertiary-color;
-  max-width: 400px;
+  min-width: 300px;
   margin: 1rem auto;
   border-radius: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  padding: 1rem;
   img{
     width: 2rem;
     height: 2rem;
     object-fit: cover;
   }
   p{
-    padding: 0;
+    padding: 0.5rem;
+    margin: auto;
+    color: $secondary-color;
+    font-weight: bold;
   }
 }
 
@@ -153,7 +177,7 @@ ul, li {
 }
 
 p {
-  max-width: 500px;
+  max-width: 70%;
   margin-bottom: 12px;
   line-height: 24px;
   padding: 10px 20px;
@@ -166,7 +190,6 @@ p {
 .message {
   display: flex;
   align-items: center;
-  
   word-wrap: break-word;
 }
 .message p{
@@ -178,13 +201,14 @@ p {
 }
 
 .sent p {
-  color: white;
+  color: $secondary-color;
   background: $primary-color;
   align-self: flex-end;
+  
 }
 .received p {
-  background: #e5e5ea;
-  color: black;
+  background: $quatery-color;
+  color: $secondary-color;
 }
 
 img {
@@ -192,4 +216,37 @@ img {
   height: 40px;
   border-radius: 50%;
   margin: 2px 5px;
+}
+@media only screen and (max-width:600px) {
+  .App header h1{
+    font-size: larger;
+  }
+  .social{
+    a{
+      img{
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+  }
+  .sign-out{
+    color: white;
+    background: $secondary-color;
+    max-width: 200px;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    img{
+      width: 2rem;
+      height: 2rem;
+      object-fit: cover;
+    }
+    p{
+      font-size: medium;
+      padding: 0.5rem;
+      margin: auto;
+    }
+  }
 }
